--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "webpack-plugin-amd2cmd",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A webpack plugin - Transfer amd bundle to cmd.",
-  "main": "main/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "node test/index.test.js"
   },
