--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-plugin-amd2cmd",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A webpack plugin - Transfer amd bundle to cmd.",
   "main": "lib/index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "webpack": "1.x.x"
   },
   "dependencies": {
-    "debug": "^3.1.0"
+    "debug": "^3.1.0",
+    "webpack-sources": "^1.1.0"
   }
 }
